# cub-inline-variable

./: CMakeLists.txt  README.md
cmake/: cctest.cmake
include/cub/: identity.h  inline_variable.h
test/: CMakeLists.txt  inline_variable_a.cc  inline_variable_b.cc  inline_variable_def.h  inline_variable_test.cc
